Added parent finding code, image loading code for webkit and another test

--- a/test/index.html
+++ b/test/index.html
@@ -33,19 +33,17 @@
 			box-align: center;
 		}
 
-		#container1 {
+		#container1, #container3 {
 			height: 200px;
 			width: 200px;
 		}
 
-		#container2 {
+		#container2, #container4 {
 			height: 100px;
 			width: 200px;
 		}
 
 		.object {
-			height: 480px;
-			width: 640px;
 			background-color: rgba(0, 255, 0, 0.5);
 		}
 	</style>
@@ -68,11 +66,19 @@
   <div id="mod-output"></div>
 
 	<div id="container1" class="container">
-		<div class="object"></div>
+		<img class="object" src="image.jpg" alt="ratio test">
 	</div>
 
 	<div id="container2" class="container">
-			<div class="object"></div>
+			<img class="object" src="image.jpg" alt="ratio test">
+	</div>
+
+	<div id="container3" class="container">
+		<img class="object" src="smallimage.jpg" alt="ratio test">
+	</div>
+
+	<div id="container4" class="container">
+			<img class="object" src="smallimage.jpg" alt="ratio test">
 	</div>
 
 </body>
